Diseño responsive casi terminado

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="estudios">
                 
                 <h2>Formación</h2>
-                <p2>-Diplomado en Ciencias Empresariales por la Universitat de València. Promoción 1997-2001.</p2><br>
+                <p2>-Diplomado en Ciencias Empresariales por la Universitat de València.</p2><br>
                 <p2>-Título de Bachiller en Florida Cenrtre de Formació. 1993-1997.</p2><br>
                 <p2>-Ejecutivo comercial en el mercado asegurador. Universitat Politècnica de València. 2020.</p2><br>
                 <p2>-Asesor financiero en Crédito Hipotecario. 2021</p2><br>
