Solucion errores y readme añadido(vacio)

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                         
                         </div>
                     <div class="contacto">
-                        <a href="/contacto.html"><img src="img/contacto.png"></a>
+                        <a href="contacto.html"><img src="img/contacto.png"></a>
                          
                     </div>
                 </div>
         </div>
         <div class="imagenpersonal">
             <div class="fotoprincipal">
-                <img src="/img/joanpuig.jpg">
+                <img src="img/joanpuig.jpg">
             </div>
             <div class="nombre">
                 <p> Joan Puig</p>
