--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
         </div>
         <div class="botones">
             <button type="button" class="btn btn-outline-primary">Enviar</button>
-            <a href="/index.html"><button type="button" class="btn btn-outline-success" >Volver</button></a>
+            <a href="index.html"><button type="button" class="btn btn-outline-success" >Volver</button></a>
         </div>
 
 
